moved demo page to root level
necessary for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Token Selector</title>
-	<link rel="stylesheet" href="../token_selector.css">
-	<link rel="stylesheet" href="demo.css">
+	<link rel="stylesheet" href="token_selector.css">
+	<link rel="stylesheet" href="demo/demo.css">
 </head>
 
 <body>
@@ -31,8 +31,8 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
 	<script src="https://raw.github.com/appendto/jquery-mockjax/v1.5.1/jquery.mockjax.js"></script>
-	<script src="../token_selector.js"></script>
-	<script src="demo.js"></script>
+	<script src="token_selector.js"></script>
+	<script src="demo/demo.js"></script>
 </body>
 
 </html>
