improved tagline and demo
tagline is still barely descriptive

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,7 @@
 	<h1>Token Selector</h1>
 
 	<h3>multi-select</h2>
+	<p>enter three or more characters:</p>
 	<input class="tokens"
 			value="1, 2"
 			data-tokens='[{ "id": 1, "name": "Foo" }, { "id": 2, "name": "Bar" }]'
@@ -19,6 +20,7 @@
 			data-token-uri="/tokens/%7Bid%7D">
 
 	<h3>single-choice</h2>
+	<p>remove token to enter and select a new term:</p>
 	<input class="tokens"
 			value="foo"
 			data-tokens='[{ "id": "foo", "name": "lorem ipsum" }]'
