added Fork Me ribbon

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,9 @@
 
 <body>
 	<h1>Token Selector</h1>
+	<a href="https://github.com/innoq/token_selector" class="ribbon">
+		<img src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
+	</a>
 
 	<h3>multi-select</h2>
 	<p>enter three or more characters:</p>
